src/objects/Audit_Section__c.object
<CustomObject>
    <description>This objects houses the total scores for each section of the audit</description>
    <fields>
        <fullName>Actual_Score__c</fullName>
        <label>Actual Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Outcome__c</fullName>
        <label>Audit Outcome</label>
        <referenceTo>Audit_Outcome__c</referenceTo>
        <relationshipLabel>Audit Sections</relationshipLabel>
        <relationshipName>Audit_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Major_Non_Conformities__c</fullName>
        <label>Major Non-Conformities</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <label>Max Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minor_Non_Conformities__c</fullName>
        <label>Minor Non-Conformities</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <formula>Actual_Score__c / Max_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <label>Section Number</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Audit Section</label>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>Audit Section Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>